Bug 379030 - regression: mail HTML settings gone
Summary: regression: mail HTML settings gone
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-21 09:43 UTC by Martin Koller
Modified: 2017-04-21 12:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2017-04-21 09:43:40 UTC
In a previous version there were fields where I could select if I want to show the mails directly in HTML or only plain text for this contact.
I don't find this field (I think there were 2 fields).

Also, when selecting in kmail "show HTML format when mail comes from this contact" this is not remembered.
Maybe both things have the same reason ?
Comment 1 Laurent Montel 2017-04-21 12:28:15 UTC
Git commit 49bf5453f794ac993df885c9e0b3d59dfed9b50d by Montel Laurent.
Committed on 21/04/2017 at 11:54.
Pushed by mlaurent into branch 'master'.

Fix Bug 379030 - regression: mail HTML settings gone

FIXED-IN: 5.6.0

M  +1    -1    src/editor/generalinfoeditor/autotests/messageformattingwidgettest.cpp
M  +9    -0    src/editor/generalinfoeditor/generalinfowidget.cpp
M  +2    -0    src/editor/generalinfoeditor/generalinfowidget.h
M  +2    -0    src/editor/generalinfoeditor/messageformattingwidget.cpp
M  +3    -1    src/editor/generalinfoeditor/messageformattingwidget.h

https://commits.kde.org/akonadi-contacts/49bf5453f794ac993df885c9e0b3d59dfed9b50d