Fix Bug 379030 - regression: mail HTML settings gone

FIXED-IN: 5.6.0
BUG: 379030